Updated net/unifi to 8.2.93
For changes before 7.5.176 see https://community.ui.com/releases

Now requires mongodb >= 4 and openjdk 17

7.5.176

Improvements

 - Added support for DNS Shield. This requires a UniFi Next-Gen Gateway or UniFi Gateway Console with version 3.2 or newer.
 - Added Switch-related System Logs in its Property Panel.
 - Improved Traffic Monitor UX.
 - Added time estimate when filtering by clients
 - Improved filtering and navigation
 - Improved Dashboard UX.
 - Added confirmation when trying to set Primary/Secondary WAN to ports that are not connected to the Internet.
 - Added messaging for regions where 6GHz is not (yet) supported.
 - Added validation for unreachable custom Echo/Internet Verification Servers.
 - Added support for opening side panels while staying on the same page. E.g., opening a Client property panel while being on the Dashboard.
 - Added validation for checking Honeypot IPs against Fixed IPs from Clients.
 - Added Guest authorization by admins in the System Logs.
 - Added the "Manage" option to the Profiles settings.
 - Added support for running a speed test on WAN2.
 - Added Radio Antenna selection for UWB-XG.
 - Added Country/Region selector to the Network Application Server setup wizard.
 - Automatically restore from recovery backup after replacing the HDD on a UCK G2 Plus.
 - Improved setup flow for Windows/macOS.
 - Improved STP Discarding UX in the Port Manager.
 - Improved auto-backup schedule limits on UniFi Consoles.
 - Improved Data Retention options on UniFi Consoles.
 - Improved Voucher creation process.
 - Improved searching in Settings.
 - Improved Settings section organization.
 - Improved Firewall Rules table UX.
 - Improved Network Application loading time.
 - Improved Device update resiliency by using cached firmware to update a device if the device fails to download the firmware from our servers.
 - Improved adding/editing administrators on Network Application servers.
 - Improved displaying of link speed